--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 	    <meta property="og:type" content="website">
         <meta property="og:title" content="내 손안에 서울 | 뉴스레터 100만명 구독 감사해치 ">
         <meta property="og:description" content="뉴스레터 100만명 구독 감사해치">
-        <meta property="og:image" content=""> <!-- 링크 확인 필요 -->
+        
+        <meta property="og:image" content="./images/subscriber/og_100evt.png"> <!-- 링크 확인 필요 -->
         <meta property="og:url" content="https://mediahub.seoul.go.kr/"> <!-- 링크 확인 필요 -->
+
         <link rel="shortcut icon" href="https://mediahub.seoul.go.kr/images/common/favicon2.png">
-        <link rel="stylesheet" href="./css/subscriber/aos.css" />
-        <link rel="stylesheet" href="./css/subscriber/style.css">
-        <script type="text/javascript" src="./js/subscriber/jquery-2.2.4.min.js"></script>
-        <script type="text/javascript" src="./js/subscriber/gsap.min.js"></script>
-		<script type="text/javascript" src="./js/subscriber/ScrollTrigger.min.js"></script>
-        <script type="text/javascript" src="./js/subscriber/aos.js"></script>
-        <script type="text/javascript" src="./js/subscriber/ui.js"></script>		        
+        <link rel="stylesheet" href="/css/subscriber/aos.css" />
+        <link rel="stylesheet" href="/css/subscriber/style.css">
+        <script type="text/javascript" src="/js/subscriber/jquery-2.2.4.min.js"></script>
+        <script type="text/javascript" src="/js/subscriber/gsap.min.js"></script>
+		<script type="text/javascript" src="/js/subscriber/ScrollTrigger.min.js"></script>
+        <script type="text/javascript" src="/js/subscriber/aos.js"></script>
+        <script type="text/javascript" src="/js/subscriber/ui.js"></script>		        
 	</head>
 	<body>
 
@@ -613,7 +615,7 @@
 
     </main>
 
-    <footer id="cb-footer" class="wrap" role="contentinfo">
+    <footer id="cb-footer" role="contentinfo">
         <div class="etc_group">
             <div class="etc_wrap">
                 <dl class="etc">
