--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <meta property="og:url" content="https://mediahub.seoul.go.kr/"> <!-- 링크 확인 필요 -->
 
         <link rel="shortcut icon" href="https://mediahub.seoul.go.kr/images/common/favicon2.png">
-        <link rel="stylesheet" href="/css/subscriber/aos.css" />
-        <link rel="stylesheet" href="/css/subscriber/style.css">
-        <script type="text/javascript" src="/js/subscriber/jquery-2.2.4.min.js"></script>
-        <script type="text/javascript" src="/js/subscriber/gsap.min.js"></script>
-		<script type="text/javascript" src="/js/subscriber/ScrollTrigger.min.js"></script>
-        <script type="text/javascript" src="/js/subscriber/aos.js"></script>
-        <script type="text/javascript" src="/js/subscriber/ui.js"></script>		        
+        <link rel="stylesheet" href="./css/subscriber/aos.css" />
+        <link rel="stylesheet" href="./css/subscriber/style.css">
+        <script type="text/javascript" src="./js/subscriber/jquery-2.2.4.min.js"></script>
+        <script type="text/javascript" src="./js/subscriber/gsap.min.js"></script>
+		<script type="text/javascript" src="./js/subscriber/ScrollTrigger.min.js"></script>
+        <script type="text/javascript" src="./js/subscriber/aos.js"></script>
+        <script type="text/javascript" src="./js/subscriber/ui.js"></script>		        
 	</head>
 	<body>
 
@@ -175,6 +175,7 @@
                             <img src="./images/subscriber/popup_firework.png" class="fire" alt="폭죽">
                             <img src="./images/subscriber/popup_win_deco.png" class="deco" alt="당첨 데코">
                             <img src="./images/subscriber/popup_box_bg.png" class="box" alt="박스">
+
                             <!-- s: 당첨 캐릭터 변경 -->
                             <img src="./images/subscriber/popup_win_hachi.png" class="figure" alt="당첨 해치">
                             <!-- <img src="./images/subscriber/popup_win_joo.png" class="figure" alt="당첨 주작"> -->
@@ -182,15 +183,18 @@
                             <!-- <img src="./images/subscriber/popup_win_young.png" class="figure" alt="당첨 청룡"> -->
                             <!-- <img src="./images/subscriber/popup_win_moo.png" class="figure" alt="당첨 현무"> -->
                             <!-- s: 당첨 캐릭터 변경  -->
+                            
                         </div><!-- //box_inner -->
                         <p class="win_txt">
                             <img src="./images/subscriber/popup_win_hachi_txt.png" class="txt" alt="해치 당첨">
+
                             <!-- s: 당첨 캐릭터 변경시 같이 변경 될 텍스트 이미지  -->
                             <!-- <img src="./images/subscriber/popup_win_joo_txt.png" alt="주작 당첨"> -->
                             <!-- <img src="./images/subscriber/popup_win_ho_txt.png" alt="백호 당첨"> -->
                             <!-- <img src="./images/subscriber/popup_win_young_txt.png" alt="청룡 당첨"> -->
                             <!-- <img src="./images/subscriber/popup_win_moo_txt.png" alt="현무 당첨"> -->
                             <!-- e: 당첨 캐릭터 변경시 같이 변경 될 텍스트 이미지  -->
+
                         </p><!-- //win_txt -->
                     </div><!-- //box_outer -->
                 </div><!-- //rdm_popup_wrap_inner -->
@@ -239,6 +243,7 @@
                         <div class="week">
                             <p>
                                 <span>29</span>
+                                <img src="./images/subscriber/evt01_stamp_moo.png" alt="현무 스탬프" class="stamp">
                             </p>
                             <p>
                                 <span>30</span>
@@ -257,7 +262,6 @@
                             </p>
                             <p>
                                 <span>5</span>
-                                <img src="./images/subscriber/evt01_stamp_moo.png" alt="현무 스탬프" class="stamp">
                             </p>
                         </div><!-- //week -->
                         <div class="week">
@@ -336,7 +340,7 @@
                         <strong><em class="pink">해치</em>를 가장 많이 모은 분들 가운데</strong><br>
                         500명을 추첨해 모바일 문화상품권을 드립니다.
                     </p>
-                    <img src="./images/subscriber/evt01_gift.png" alt="모바일 문화상품권 10,000원 500명 추천">
+                    <img src="./images/subscriber/evt01_gift.png" alt="모바일 문화상품권 10,000원 500명 추천"><!-- **이미지 추후 변경 예정** -->
                     <dl class="evt01_nt_list">
                         <dt>&lsquo;뽑아 해치&rsquo; 이벤트 참여 전 확인하세요!</dt>
                         <dd>
@@ -446,7 +450,7 @@
                             <strong>성적이 가장 우수한 시민 분들 가운데</strong><br>
                             500명을 추첨해 모바일 문화상품권을 드립니다.
                         </p>
-                        <img src="./images/subscriber/evt02_gift.png" alt="모바일 문화상품권 5,000원 500명 추천">
+                        <img src="./images/subscriber/evt02_gift.png" alt="모바일 문화상품권 5,000원 500명 추천"><!-- **이미지 추후 변경 예정** -->
                     </div><!-- //evt02_gift_inner -->
                     <dl class="evt02_nt_list" data-aos="fade-up" data-aos-duration="600">
                         <dt>&lsquo;풀어 해치&rsquo; 이벤트 참여 전 확인하세요!</dt>
@@ -500,7 +504,7 @@
                         <strong>뉴스레터를 가장 애독해주신 분들 가운데</strong><br>
                         300명을 추첨해 모바일 문화상품권을 드립니다.
                     </p>
-                    <img src="./images/subscriber/evt03_gift.png" alt="모바일 문화상품권 5,000원 300명 추천">
+                    <img src="./images/subscriber/evt03_gift.png" alt="모바일 문화상품권 5,000원 300명 추천"><!-- **이미지 추후 변경 예정** -->
                     <dl class="evt03_nt_list">
                         <dt>&lsquo;구독 해치&rsquo; 이벤트 참여 전 확인하세요!</dt>
                         <dd>
@@ -534,19 +538,19 @@
                         <ul>
                             <li>
                                 <strong>QR 코드 인식 후 설치</strong>
-                                <img src="./images/subscriber/evt04_qr.png" alt="내 손안에 서울 QR코드">
+                                <img src="./images/subscriber/evt04_qr.png" alt="내 손안에 서울 QR코드"><!-- **이미지 추후 변경 예정** -->
                                 <p class="txt">
                                     QR코드를 인식하시면<br>
                                     해당 스토어로 이동합니다
-                                </p>
+                                </p><!-- //txt -->
                             </li>
                             <li>
                                 <strong>버튼 클릭하여 설치</strong>
                                 <img src="./images/subscriber/evt04_app.png" alt="내 손안에 서울 앱">
                                 <p class="txt">
-                                    <a href="#" target="_blank" class="btn_app btn_go_ios"><span>App Store</span></a>
-                                    <a href="#" target="_blank" class="btn_app btn_go_android"><span>Google Play</span></a>
-                                </p>
+                                    <a href="https://apps.apple.com/kr/app/%EB%82%B4-%EC%86%90%EC%95%88%EC%97%90-%EC%84%9C%EC%9A%B8/id926145309" target="_blank" class="btn_app btn_go_ios"><span>App Store</span></a>
+                                    <a href="https://play.google.com/store/apps/details?id=kr.go.seoul.inhands&amp;hl=kr" target="_blank" class="btn_app btn_go_android"><span>Google Play</span></a>
+                                </p><!-- //txt -->
                             </li>
                         </ul>
                     </div><!-- //step_box.one -->
@@ -570,8 +574,8 @@
                     <p class="txt">
                         <strong>앱 다운 후, 푸시 동의를 해주신 분들 가운데</strong><br>
                         300명을 추첨해 모바일 문화상품권을 드립니다.
-                    </p>
-                    <img src="./images/subscriber/evt04_gift.png" alt="모바일 문화상품권 3,000원 300명 추천">
+                    </p><!-- //txt -->
+                    <img src="./images/subscriber/evt04_gift.png" alt="모바일 문화상품권 3,000원 300명 추천"><!-- **이미지 추후 변경 예정** -->
                 </div><!-- //evt_gift_box -->
             </div><!-- //inner -->
         </section><!-- //evt04_section -->
