--- a/index.html
+++ b/index.html
@@ -559,8 +559,8 @@
                         <div class="capture_way">
                             <img src="./images/subscriber/evt04_push.png" alt="앱푸시 설정 설명">
                             <p class="step_txt">               
-                                <span>&lt;내 손안에 서울&gt;앱에서 메뉴(<img src="./images/subscriber/evt04_ico_menu.png" alt="설정 아이콘">) 클릭</span>
-                                <span>앱 설정(<img src="./images/subscriber/evt04_ico_menu.png" alt="메뉴 아이콘">) 클릭</span>
+                                <span>&lt;내 손안에 서울&gt;앱에서 메뉴(<img src="./images/subscriber/evt04_ico_menu.png" alt="메뉴 아이콘">) 클릭</span>
+                                <span>앱 설정(<img src="./images/subscriber/evt04_ico_setting.png" alt="설정 아이콘">) 클릭</span>
                                 <span>Push 수신동의</span>
                             </p><!-- //step_txt -->
                         </div><!-- //capture_way -->
